# editor

./: CMakeLists.txt
forms/: mainwindow.ui  propertiespanel.ui
resources/: resources.qrc
src/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h
src/items/: barcodeitem.cpp  barcodeitem.h  imageitem.cpp  imageitem.h  labelitem.cpp  labelitem.h  qrcodeitem.cpp  qrcodeitem.h  textitem.cpp  textitem.h
src/models/: labelmodels.cpp  labelmodels.h
src/ui/: labeleditview.cpp  labeleditview.h  propertiespanel.cpp  propertiespanel.h
